# FEM--

./: CMakeLists.txt  FEM++.cpp  README.md  main.cpp
FEM/: CMakeLists.txt  Core.cpp  Core.h  Elasticity2D.cpp  Elasticity2D.h  FEM.cpp  FEM.h
FEM/Elements/: Element.cpp  Element.h  Element2D.h  LTriangular.cpp  Serendipity.cpp  Serendipity.h  TriangularScheme.h
FEM/Elements/E2D/: Element2D.cpp  LTriangular.cpp  LTriangular.h  RectangularScheme.cpp  RectangularScheme.h  Serendipity.cpp  Serendipity.h  TriangularScheme.cpp
FEM/Elements/E3D/: Cube.cpp  Cube.h  CubeScheme.cpp  CubeScheme.h  Element3D.cpp  Element3D.h
FEM/Geometry/: Geometry.cpp  Geometry.h
FEM/Utils/: Utils.cpp  Utils.h
resources/: Beam.json  BeamBC.json  Cube.json  Cube2.json
